# QMLChart

./: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp  mylistmodel.cpp  mylistmodel.h
android/: AndroidManifest.xml  build.gradle
